unpackaged/main/default/objects/blng__InvoiceScheduler__c/fields/blng__AutomaticallyPostInvoices__c.field-meta.xml
<CustomField>
    <fullName>blng__AutomaticallyPostInvoices__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Déterminez si les factures doivent être publiées par défaut. Sinon, elles sont générées au format brouillon.</inlineHelpText>
    <label>Automatically Post Invoices</label>
    <type>Checkbox</type>
</CustomField>