unpackaged/main/default/objects/blng__InvoiceScheduler__c/fields/blng__BillUsageCharges__c.field-meta.xml
<CustomField>
    <fullName>blng__BillUsageCharges__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Déterminez si le type de frais de votre produit de commande est Utilisation.</inlineHelpText>
    <label>Bill Usage Charges</label>
    <type>Checkbox</type>
</CustomField>