unpackaged/main/default/objects/blng__InvoiceScheduler__c/fields/blng__EndOfMonth__c.field-meta.xml
<CustomField>
    <fullName>blng__EndOfMonth__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the invoice scheduler to run on last day of every month</description>
    <inlineHelpText>Les factures mensuelles sont exécutées le dernier jour du mois. La date de début du planificateur doit également être définie sur le dernier jour du mois.</inlineHelpText>
    <label>Run at End of Month</label>
    <type>Checkbox</type>
</CustomField>