unpackaged/main/default/objects/blng__InvoiceScheduler__c/fields/blng__IncludeAllCurrencies__c.field-meta.xml
<CustomField>
    <fullName>blng__IncludeAllCurrencies__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Sélectionnez Oui pour traiter toutes les devises de cette facture.</inlineHelpText>
    <label>Include All Currencies</label>
    <type>Checkbox</type>
</CustomField>