unpackaged/main/default/objects/blng__InvoiceScheduler__c/fields/blng__InvoiceBatches__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoiceBatches__c</fullName>
    <inlineHelpText>Sélectionnez les lots pour le traitement des factures.</inlineHelpText>
    <label>Invoice Batch</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__InvoiceBatch</valueSetName>
    </valueSet>
</CustomField>