unpackaged/main/default/objects/blng__InvoiceScheduler__c/fields/blng__InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoiceDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <inlineHelpText>Date à laquelle la facture est créée. Utilisée pour déterminer la date d&#39;échéance de la facture.</inlineHelpText>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>