unpackaged/main/default/objects/blng__InvoiceScheduler__c/fields/blng__InvoiceDayOfMonth__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoiceDayOfMonth__c</fullName>
    <inlineHelpText>Pour les exécutions de facture mensuelles, sélectionnez le numéro du jour du mois.</inlineHelpText>
    <label>Invoice Day Of Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__DayOfMonth</valueSetName>
    </valueSet>
</CustomField>