unpackaged/main/default/objects/blng__InvoiceScheduler__c/fields/blng__InvoiceDayOfWeek__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoiceDayOfWeek__c</fullName>
    <inlineHelpText>Si le type de facture est hebdomadaire, sélectionnez le numéro du jour de la semaine. Dimanche = 1.</inlineHelpText>
    <label>Invoice Day Of Week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__DayOfWeek</valueSetName>
    </valueSet>
</CustomField>