unpackaged/main/default/objects/blng__InvoiceScheduler__c/fields/blng__StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>blng__StartDateTime__c</fullName>
    <inlineHelpText>Date et heure du début du processus du planificateur de facturation.</inlineHelpText>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>