unpackaged/main/default/objects/blng__InvoiceScheduler__c/fields/blng__TargetDate__c.field-meta.xml
<CustomField>
    <fullName>blng__TargetDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <inlineHelpText>Détermine les éléments facturés.
        Les produits de commande, résumés d&#39;utilisation ou transactions de facturation actifs avec une Prochaine date de facturation ou un Remplacement prochaine date facturation antérieur ou égal à la Date cible sont facturés.</inlineHelpText>
    <label>Target Date</label>
    <type>Date</type>
</CustomField>