unpackaged/main/default/objects/blng__InvoiceScheduler__c/fields/blng__TargetDayOfMonth__c.field-meta.xml
<CustomField>
    <fullName>blng__TargetDayOfMonth__c</fullName>
    <inlineHelpText>Détermine les éléments facturés en fonction du jour du mois de la prochaine date de facturation.</inlineHelpText>
    <label>Target Day Of Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__DayOfMonth</valueSetName>
    </valueSet>
</CustomField>