unpackaged/main/default/objects/blng__InvoiceScheduler__c/fields/blng__TargetDayOfWeek__c.field-meta.xml
<CustomField>
    <fullName>blng__TargetDayOfWeek__c</fullName>
    <inlineHelpText>Détermine les éléments facturés en fonction du jour de la semaine de la prochaine date de facturation.</inlineHelpText>
    <label>Target Day Of Week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__DayOfWeek</valueSetName>
    </valueSet>
</CustomField>