unpackaged/main/default/objects/blng__InvoiceScheduler__c/fields/blng__Type__c.field-meta.xml
<CustomField>
    <fullName>blng__Type__c</fullName>
    <description>Type of Schedule.
Once - Billing will be done only one time.
Daily - Billing will be repeated continuously daily and so on</description>
    <inlineHelpText>Sélectionnez la fréquence d&#39;exécution des factures.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__SchedulerType</valueSetName>
    </valueSet>
</CustomField>