unpackaged/main/default/objects/blng__InvoiceScheduler__c/listViews/blng__All.listView-meta.xml
<ListView>
    <fullName>blng__All</fullName>
    <columns>NAME</columns>
    <columns>blng__Type__c</columns>
    <columns>blng__StartDateTime__c</columns>
    <columns>blng__InvoiceDate__c</columns>
    <columns>blng__TargetDate__c</columns>
    <columns>blng__InvoiceDayOfMonth__c</columns>
    <columns>blng__TargetDayOfMonth__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>