unpackaged/main/default/objects/blng__InvoiceScheduler__c/listViews/Planficateurs_Facturation.listView-meta.xml
<ListView>
    <fullName>Planficateurs_Facturation</fullName>
    <columns>NAME</columns>
    <columns>blng__InvoiceBatches__c</columns>
    <columns>blng__StartDateTime__c</columns>
    <columns>blng__TargetDate__c</columns>
    <columns>blng__Type__c</columns>
    <columns>blng__AutomaticallyPostInvoices__c</columns>
    <filterScope>Mine</filterScope>
    <label>Planficateurs Facturation</label>
</ListView>